@@ -4,12 +4,13 @@ import pl.pacinho.failuremanagementsystem.model.entity.TaskMessage;
 import pl.pacinho.failuremanagementsystem.ui.model.MessageDto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MessageDtoMapper {
     public static List<MessageDto> parseList(List<TaskMessage> messages) {
         return messages.stream()
                 .map(MessageDtoMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static MessageDto toDto(TaskMessage taskMessage) {
